--- a/here-geocode.html
+++ b/here-geocode.html
@@ -44,7 +44,7 @@ for more information about the <strong>HERE Calculate Route API</strong>.</p>
   <h3>Outputs:</h3>
   <dl class="message-properties">
     <dt class="optional">msg.payload.response <span class="property-type">object</span></dt>
-    <dd>Array of json objects containing Geo</dd>
+    <dd>Array of json objects containing the results of query</dd>
     <dd>Find details on the <a target="_blank" href="https://developer.here.com/documentation/maps/3.1.19.0/dev_guide/topics/geocoding.html">Geo Code Search</a> data elements and definitions.</dd>
     <dt class="optional">msg.hereparams <span class="property-type">object</span></dt>
     <dd>Array of json objects containing request parameters</dd>
