information about query parameter edited

--- a/here-geocode.html
+++ b/here-geocode.html
@@ -43,8 +43,8 @@
 for more information about the <strong>HERE GeoCode and Search API</strong>.</p>
   <h3>Inputs:</h3>
   <dl class="message-properties">
-    <dt class="optional">msg.hereparams.query <span class="property-type">string</span></dt>
-    <dd>Enter a free-text query. Examples:
+    <dt class="optional">msg.hereparams.query<span class="property-type">string</span></dt>
+    <dd>Enter a free-text query. This is a required parameter. Examples:
       125, Berliner, berlin.<br>
       Beacon, Boston, Hospital.
     </dd>
