--- a/here-geocode.html
+++ b/here-geocode.html
@@ -9,6 +9,7 @@
       name: { value:""},
       query: {value:""},
       in: {value:""},
+      limit:{value:""},
       apikey: {value:"", type:"hereapikey",required: true}
     },
     label: function() {
@@ -28,6 +29,10 @@
   </div>
   <div class="form-row">
     <label for="node-input-in"><i class="fa fa-globe"></i>in</label>
+    <input type="text" id="node-input-in" placeholder="">
+  </div>
+  <div class="form-row">
+    <label for="node-input-limit"><i class="fa fa-globe"></i>limit</label>
     <input type="text" id="node-input-in" placeholder="">
   </div>
   <div class="form-row">
@@ -52,10 +57,16 @@ for more information about the <strong>HERE GeoCode and Search API</strong>.</p>
   <dl class="message-properties">
     <dt class="optional">msg.hereparams.in <span class="property-type">string</span></dt>
     <dd>
-      Search within a geographic area. Results will be returned if they are located within the specified area.<br>
+      Optional parameter. Search within a geographic area. Results will be returned if they are located within the specified area.a country (or multiple countries), provided as comma-separated <a href="https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3">ISO 3166-1 alpha-3</a> country codes.<br>
+      The country codes are to be provided in all uppercase.<br>
       Examples:<br>
       countryCode:USA<br>
       countryCode:CAN,MEX,USA
+    </dd>
+  </dl>
+  <dl class="message-properties">
+    <dt class="optional">msg.hereparams.limit<span class="property-type">string</span></dt>
+    <dd>Optional parameter. Maximum number of results to be returned. Default: 20
     </dd>
   </dl>
   <h3>Outputs:</h3>
