limit parameter fixed

--- a/here-geocode.html
+++ b/here-geocode.html
@@ -9,7 +9,7 @@
       name: { value:""},
       query: {value:""},
       in: {value:""},
-      limit:{value:""},
+      limit:{value:0},
       apikey: {value:"", type:"hereapikey",required: true}
     },
     label: function() {
